Binary->pairwise, some formatting of the acknowledgments, etc.

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -30,11 +30,6 @@ To overcome these problems, we turn to examples of well-colored patterns for hel
 
 Consequently, the approach we take to pattern coloring is \emph{data-driven}: given a dataset of example patterns, we learn distributions over color properties such as saturation, lightness, and contrast for individual regions and for adjacent regions. We predict these distributions using discriminative spatial features of the pattern, such as the size and shape of different regions. Finally, we use the predicted distributions to score the goodness of pattern colorings.
 
-In the next sections, we introduce the dataset of patterns we use for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to score the colors of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{binary color functions} that score the colors of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps to enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
+In the next sections, we introduce the dataset of patterns we use for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to score the colors of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{pairwise color functions} that score the colors of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps to enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
 
-We then show how these three different types of scoring functions---\emph{unary}, \emph{binary}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
-
-%\remark{After pointing out the problems with the images, mention how some simple features (size of region, number of connected components) seem predictive of how colorful it should be. Call out a similar example for an adjacency feature. Mention that compatibility is still important(?) Our approach is to learn to predict these kinds of color properties given these kinds of pattern features, given a dataset of patterns. In the next sections, we'll first describe the dataset we use. Then we'll describe the unary functions we use to predict color properties of pattern regions (cite section), the binary functions we use to predict color properties of adjacent pattern regions (cite section), and our treatment of color compatibility (cite section). We'll then show how all of these different predictive functions can be combined into one unified probabilistic model through the framework of factor graphs. We can automatically tune the relative importance of each function in the model (cite section) and then sample from it to generate coloring suggestions for a given pattern (cite section).
-%}
-%
-%Rather than develop a specialized algorithm for this problem, we exploit the insight that both of these concerns---color harmony and spatial consistency---can be encoded in the extremely general framework of probabilistic factor graphs. In the next sections, we develop a data-driven factor graph model that can be trained on example colored patterns and sampled to generate new coloring suggestions. The factor graph formalism allows us to leverage existing models of color compatibility, to plug in additional coloring constraints in response to available user input, and to capture and inspect the characteristics of desired styles through established machine learning techniques.
+We then show how these three different types of scoring functions---\emph{unary}, \emph{pairwise}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
