--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -162,13 +162,13 @@ language={English}
  year = {2011}
 }
 
-@inproceedings{ContrastiveDivergence,
-  title={On contrastive divergence learning},
-  author={Carreira-Perpinan, M.A. and Hinton, G.E.},
-  booktitle={Artificial Intelligence and Statistics},
-  volume={2005},
-  year={2005}
-}
+@article{ContrastiveDivergence,
+ author = {Hinton, Geoffrey E.},
+ title = {Training products of experts by minimizing contrastive divergence},
+ journal = {Neural Computation},
+ issue_date = {August 2002},
+ year = {2002}
+} 
 
 @book{PGMBook,
   title={Probabilistic graphical models: principles and techniques},
