--- a/latex/siggraph2013/acknowledgments.tex
+++ b/latex/siggraph2013/acknowledgments.tex
@@ -1,4 +1,5 @@
 \section*{Acknowledgments}
 
-%THANK ALL THE PEOPLE AND FUNDING AGENCIES!! (Hide this section while the paper is still in review)
-[Insert information about funding agencies.] Thank you to COLOURLovers jilbert (Fig 1-4), symea (Fig 1, 10), COLOURLover (Fig 6, 12), timanttimaari, dazzlement, and ArrayOfLilly (Fig 7), Any Palacios (Fig 8-12), gregreis, magg, and praxicalidocious (Fig 11), bhsav (Fig 11, 12), vannea, and casslovescolors (Fig 12), ivy21 (Fig 13) and caseycastille (Fig 15) for their pattern templates; AlineDam (Fig 9), and sugar! and albenaj (Fig 10) for the pattern coloring examples; and Flickr users marctasman and zoomion for the reference photographs (Fig 7)       
+Support for this research was provided by Intel (ISTC-VC) and an SAP Stanford Graduate Fellowship.
+\remark{Other funding sources?}
+Thanks also to COLOURLovers \textit{jilbert} (Fig 1-4), \textit{symea} (Fig 1, 10), \textit{COLOURLover} (Fig 6, 12), \textit{timanttimaari}, \textit{dazzlement}, and \textit{ArrayOfLilly} (Fig 7), \textit{Any Palacios} (Fig 8-12), \textit{gregreis}, \textit{magg}, and \textit{praxicalidocious} (Fig 11), \textit{bhsav} (Fig 11, 12), \textit{vannea} and \textit{casslovescolors} (Fig 12), \textit{ivy21} (Fig 13) and \textit{caseycastille} (Fig 15) for their pattern templates; \textit{AlineDam} (Fig 9), and \textit{sugar!} and \textit{albenaj} (Fig 10) for the pattern coloring examples; and Flickr users \textit{marctasman} and \textit{zoomion} for the reference photographs (Fig 7)       
