Typo fixes and eliminating the confusing mention of MMR from the teaser caption.

--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -128,7 +128,7 @@
         Input pattern                   & Sampled colorings               & Random colorings                \\
     \end{tabular}
 %\end{table}
-\caption{Given the uncolored pattern templates shown on the left, we use our probabilistic factor graph model to generate the pattern colorings shown in the middle. Our factor graph is trained on example patterns created by artists, and the top ten results after MMR diversification are shown. For comparison, on the right we show randomized colorings of each template. The lightness information shown to visualize the input pattern is not used.}
+\caption{Given the uncolored pattern templates shown on the left, we use a probabilistic factor graph model to generate the pattern colorings shown in the middle. The factor graph is trained on example patterns colored by human artists. For comparison, on the right we show randomized colorings of each template. The lightness information shown to visualize the input pattern is not used.}
 \label{fig:teaser}
 \vspace{-1.0em}
 
