--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -12,7 +12,7 @@ As with individual pattern regions, there are many possible properties of the co
 \begin{description}
 	\item[Perceptual Difference] is the Euclidean distance between two colors in \lab space and is the primary descriptor of `contrast' between two colors that we use in our model. This distance metric is simple and efficient to evaluate; more sophisticated formulae have also been proposed~\cite{CIEDE2000}.
 	\item[Relative Lightness] is the absolute difference between the L values of two colors in \lab space. This `difference of intensities' captures another important type of contrast between two colors.
-	\item[Relative Saturation] is the absolute difference between the saturation values of two two colors, using the definition from Section~\ref{sec:unary}. This property helps capture whether or not two colors should be mutually saturated/desaturated
+	\item[Relative Saturation] is the absolute difference between the saturation values of two colors, using the definition from Section~\ref{sec:unary}. This property helps capture whether or not two colors should be mutually saturated/desaturated
 	\item[Chromatic Difference] is the squared fraction of perceptual distance due to the \lab chroma channels: $\frac{\delta a^2+\delta b^2}{\delta a^2+\delta b^2+\delta L^2}$. This value measures the difference between two colors after factoring out lightness.
 	\item[Color Name Similarity] is the cosine similarity between the color name count vectors defined in Section~\ref{sec:unary}~\cite{ColorNamingModels}. This measure assesses whether two colors are typically referred to with the same set of names.
 \end{description}
