Adding recommended references.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -384,3 +384,18 @@ author={Hinton, Geoffrey E.},
     volume = {30},
     year = {2005}
 }
+
+@article{MaterialStyleTransfer,
+ author = {Nguyen, Chuong H. and Ritschel, Tobias and Myszkowski, Karol and Eisemann, Elmar and Seidel, Hans-Peter},
+ title = {3D Material Style Transfer},
+ journal = {Computer Graphics Forum},
+ issue_date = {May 2012},
+ year = {2012}
+} 
+
+@inproceedings{PhotoAesthetics,
+ author = {Datta, Ritendra and Joshi, Dhiraj and Li, Jia and Wang, James Z.},
+ title = {Studying aesthetics in photographic images using a computational approach},
+ booktitle = {Proc. ECCV 2006},
+ year = {2006}
+}
