--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -133,7 +133,9 @@ Style&Example&Results\\ %\hline
 \centering
 \begin{tabular}{cc} 
 \includegraphics[width=.44\linewidth]{figs/styleSugarExamples2}&\includegraphics[width=.44\linewidth]{figs/styleAlbenajExamples2}\vspace{1.0em}\\
+%\includegraphics[width=.44\linewidth]{figs/styleWondercakeExamples}&\includegraphics[width=.44\linewidth]{figs/styleAlbenajExamples2}\vspace{1.0em}\\
 \includegraphics[width=.44\linewidth]{figs/styleSugar2}&\includegraphics[width=.44\linewidth]{figs/styleAlbenaj2}\\
+%\includegraphics[width=.44\linewidth]{figs/styleWondercake}&\includegraphics[width=.44\linewidth]{figs/styleAlbenaj2}\\
 Artist A&Artist B\\
 \end{tabular}
 
