--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -12,7 +12,7 @@ We conducted a judgement study to better understand how coloring suggestions fro
 \newcommand{\randomSource}{\emph{Random}}
 We first generate coloring suggestions from four different sources----\artistSource~colorings, our \modelSource, a \compatSource-only model using the measure by O'Donovan et. al.~\shortcite{ODonovan}, and \randomSource~colorings---to be compared in the study. Next, we select 15 different pattern templates that do not have strong semantic associations and are also outside of our training set. For each pattern template, we then generate 4 coloring suggestions per source. For the \artistSource~source, we randomly choose 4 colorings from the top 45 artist colorings on COLOURlovers. For our \modelSource, we sample colors using parallel tempering for 2000 iterations and choose the top 4 results using MMR with $\lambda = 0.5$. We similarly sample \compatSource-only colorings. Finally, for the \randomSource~source, we generate 4 random colorings.
 
-The study interface presents participants with a randomized grid of all 16 coloring suggestions for a pattern template. Participants are asked to chose the 4 colorings they like the most and the 4 they like the least from the grid before moving on to the next template. Each participant responds to 5 pattern templates randomly drawn from the pool of 15 and presented in random order. One template is presented twice to check for participant consistency.
+The study interface presents participants with a randomized grid of all 16 coloring suggestions for a pattern template. Participants are asked to choose the 4 colorings they like the most and the 4 they like the least from the grid before moving on to the next template. Each participant responds to 5 pattern templates randomly drawn from the pool of 15 and presented in random order. One template is presented twice to check for participant consistency.
 
 Figure ~\ref{fig:study} shows the percentage of suggestions from each source that particpants chose as a `Top 4' or `Bottom 4' pattern. When counting, we do not include suggestions from the replicated template. Logistic regression shows that the source of a suggestion significantly affects the chances that it will be chosen as either `Top 4' or `Bottom 4' coloring. Tukey all-pair comparison tests show that all differences are significant ($p < 0.01$), except for the odds that an \artistSource~suggestion will be chosen as a `Bottom 4' suggestion versus a \modelSource~suggestion. \artistSource~patterns are selected most often as a `Top 4' pattern, with our \modelSource~patterns selected second most often. In addition, \modelSource~patterns are selected least as a `Bottom 4' pattern, along with \artistSource~patterns.
 
